# nlp-sql-assistant

./: .gitignore  README.md  cli.py  feedback.jsonl  patterns.jsonl  pyproject.toml  requirements.txt  synonyms.json  user_templates.jsonl
apps/: streamlit_app.py
legacy_assistant/: active.py  config.py  db.py  dynamic_templates.py  evaluate.py  feedback.py  feedback_learn.py  joins.py  learner.py  lex.py  nl2sql.py  nlp.py  paraphrase.py  pmi.py  predictor.py  retriever.py  templates.py
legacy_assistant_demo.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_queries.py
